--- a/hoc/highlighted-blocks/index.html
+++ b/hoc/highlighted-blocks/index.html
@@ -19,6 +19,7 @@
     <script type="text/babel" src="./js/Popular.js"></script>
     <script type="text/babel" src="./js/Article.js"></script>
     <script type="text/babel" src="./js/Video.js"></script>
+    <script type="text/babel" src="./js/Label.js"></script>
     <script type="text/babel" src="./js/List.js"></script>
     <script type="text/babel" src="./js/App.js"></script>
 
