--- a/hoc/table-aggregation/index.html
+++ b/hoc/table-aggregation/index.html
@@ -19,6 +19,7 @@
     <script type="text/babel" src="./js/MonthTable.js"></script>
     <script type="text/babel" src="./js/YearTable.js"></script>
     <script type="text/babel" src="./js/SortTable.js"></script>
+    <script type="text/babel" src="./js/GroupTable.js"></script>
     <script type="text/babel" src="./js/App.js"></script>
 
     <script type="text/babel">
