--- a/other-libs/gmaps/index.html
+++ b/other-libs/gmaps/index.html
@@ -20,6 +20,7 @@
 <body class="app">
   <div id="root"></div>
 
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB26lJFkiOq_rbZ0sIQbduyDPptMywHn6k"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.js"></script>
   <script src="https://unpkg.com/prop-types/prop-types.min.js"></script>
