--- a/other-libs/alertify/index.html
+++ b/other-libs/alertify/index.html
@@ -15,6 +15,8 @@
 
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/alertify.core.css">
+  <link rel="stylesheet" href="./css/alertify.bootstrap.css">
 </head>
 
 <body class="app">
@@ -24,8 +26,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.js"></script>
   <script src="https://unpkg.com/prop-types/prop-types.min.js"></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <script src="./js/alertify.min.js"></script>
 
-  <script type="text/babel" src="./js/Alert.js"></script>
   <script type="text/babel" src="./js/Generator.js"></script>
   <script type="text/babel" src="./js/App.js"></script>
 
