--- a/other-libs/gmaps/index.html
+++ b/other-libs/gmaps/index.html
@@ -20,11 +20,11 @@
 <body class="app">
   <div id="root"></div>
 
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNy0OODEI2WUrcxcyxH4ES96d9N4SnBIU"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.js"></script>
   <script src="https://unpkg.com/prop-types/prop-types.min.js"></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7_nWlPKRAsyLfWJ9TwueWM-ZXNhH94oI"></script>
 
   <script type="text/babel" src="./js/Map.js"></script>
   <script type="text/babel" src="./js/Site.js"></script>
